Update personal information in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Oscar Cabrera</title>
+  <title>Antonio E. Saldaña González</title>
 
   <!--
     - favicon
@@ -47,7 +47,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Óscar Cabrera">Óscar Cabrera <br>Redondo</h1>
+          <h1 class="name" title="Antonio E Saldaña González">Antonio E Saldaña González <br>Redondo</h1>
 
           <p class="title">PhD. Student</p>
         </div>
@@ -75,7 +75,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:oscar.cabrera.redondo@upc.edu" class="contact-link">oscar.cabrera.<br>redondo@upc.edu</a>
+              <a href="mailto:antonio.emmanuel.saldana@upc.edu" class="contact-link">antonio.emmanuel.<br>saldana@upc.edu</a>
             </div>
 
           </li>
@@ -89,7 +89,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+34676331228" class="contact-link">(+34) 676 331 228</a>
+              <a href="tel:+34 631-506-910" class="contact-link">(+34) 631-506-910</a>
             </div>
 
           </li> -->
@@ -117,7 +117,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Les Corts, 08034, Barcelona, Spain</address>
+              <address> Carrer de Valencia, 08015, Barcelona, Spain</address>
             </div>
 
           </li>
