--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
     </div>
 
     <div style="margin-top:1.5rem;" class="fade-up">
-      <a href="https://scholar.google.es/citations?user=YOUR_ID" target="_blank" class="btn btn-navy" style="font-size:.85rem;">
+      <a href="https://scholar.google.es/citations?user=chUWIOkAAAAJ" target="_blank" class="btn btn-navy" style="font-size:.85rem;">
         View Google Scholar Profile ↗
       </a>
       <a href="https://orcid.org/0000-0002-5708-2049" target="_blank" class="btn btn-outline" style="font-size:.85rem; color:var(--navy); border-color:var(--gray-300);">
@@ -1203,7 +1203,7 @@
           <a href="https://orcid.org/0000-0002-5708-2049" target="_blank" class="social-link" title="ORCID">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0C5.372 0 0 5.372 0 12s5.372 12 12 12 12-5.372 12-12S18.628 0 12 0zM7.369 4.378a.87.87 0 110 1.74.87.87 0 010-1.74zm-.78 3.476h1.56v11.29H6.59V7.854zm3.77 0h4.22c3.81 0 5.59 2.4 5.59 5.65 0 3.25-1.78 5.64-5.59 5.64h-4.22V7.854zm1.56 1.39v8.51h2.56c2.96 0 4.06-1.88 4.06-4.26 0-2.37-1.1-4.25-4.06-4.25h-2.56z"/></svg>
           </a>
-          <a href="https://scholar.google.es/citations?user=YOUR_ID" target="_blank" class="social-link" title="Google Scholar">
+          <a href="https://scholar.google.es/citations?user=chUWIOkAAAAJ" target="_blank" class="social-link" title="Google Scholar">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M5.242 13.769L0 9.5 12 0l12 9.5-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 100 14 7 7 0 000-14z"/></svg>
           </a>
           <a href="https://www.scopus.com/authid/detail.uri?authorId=57218924927" target="_blank" class="social-link" title="Scopus">
