--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@
       </div>
 
       <div>
-        <form action="https://formspree.io/f/mdkodwey" method="POST" class="contact-form">
+        <form action="https://formspree.io/f/mkovywjj" method="POST" class="contact-form">
           <div class="form-row">
             <input type="text" name="fullname" class="form-input" placeholder="Full name" required>
             <input type="email" name="email" class="form-input" placeholder="Email address" required>
