--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Antonio E. Saldaña González — Electrical Engineer &amp; Researcher</title>
   <meta name="description" content="PhD in Electrical Engineering. Power systems, AI, distribution network planning, renewable energy integration. Barcelona, Spain.">
-  <link rel="shortcut icon" href="./assets/images/logo-1-color.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/logo-1-color.png.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=DM+Serif+Display&display=swap" rel="stylesheet">
