--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
           </div>
         </div>
       </div>
-      <img src="./assets/images/my-avatar.png" alt="Antonio Saldaña González" class="hero-avatar">
+      <img src="./assets/images/logo-1-color.png.png" alt="Antonio Saldaña González" class="hero-avatar">
     </div>
   </div>
 </section>
